updating courses, open ed

--- a/raw/visual-media.html
+++ b/raw/visual-media.html
@@ -24,7 +24,7 @@ http://education.adelphi.edu/ed-tech
     <li><a href="#class-meetings">Class meetings</a></li>
     <li><a href="#assignments-and-grading">Assignments and Grading</a><ul>
     <li><a href="#educational-media-studio-50">Educational Media Studio (50%)</a></li>
-    <li><a href="#visuality-in-educational-media-50">Visuality in Educational Media (50%)</a></li>
+    <li><a href="#visuality-in-educational-media-or-youth-media-50">Visuality in Educational Media or Youth Media (50%)</a></li>
     </ul></li>
     </ul>
   </div>
@@ -53,7 +53,7 @@ http://education.adelphi.edu/ed-tech
                           <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <script type="text/javascript">
                           <!--
                           h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
+                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
                           // -->
                           </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
                           <li><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 1</a></li>
@@ -66,13 +66,13 @@ http://education.adelphi.edu/ed-tech
                           <li>Wednesday, 3-5PM</li>
                           <li>Thursday, 3-5PM</li>
                           </ul>
-                          <section class="level2" id="required-books">
-                          <h2><a href="#TOC">Required Books</a></h2>
-                          <p><img src="http://img1.imagesbn.com/p/9781564843074_p0_v1_s260x420.JPG"> Baker, F. W. (2012). <em>Media literacy in the K-12 classroom (1st ed.)</em>. Eugene, Or: International Society for Technology in Education. ISBN 9781564843074 <a href="http://www.powells.com/biblio/61-9781564843074-0">powells</a> <a href="http://www.barnesandnoble.com/w/media-literacy-in-the-k-12-classroom-frank-w-baker/1104160405">b&amp;n</a> <a href="http://www.amazon.com/Media-Literacy-Classroom-Frank-Baker/dp/1564843076/">amz</a></p>
-                          <p><img src="http://ecx.images-amazon.com/images/I/51w5QjUCgLL.jpg" title="visual culture reader book cover"> Mirzoeff, N. (Ed.). (2013). <em>The visual culture reader (3rd ed.)</em>. London ; New York: Routledge. ISBN 9780415620550 <a href="http://www.amazon.com/Visual-Culture-Reader-Nicholas-Mirzoeff/dp/0415782627/">amz</a> <a href="http://www.barnesandnoble.com/w/visual-culture-reader-nicholas-mirzoeff/1100170490">b&amp;n</a> <a href="http://www.powells.com/biblio/9780415782623">powells</a></p>
+                          <section id="required-books" class="level2">
+                          <h2><a href="#required-books">Required Books</a></h2>
+                          <p><img src="http://img1.imagesbn.com/p/9781564843074_p0_v1_s260x420.JPG" /> Baker, F. W. (2012). <em>Media literacy in the K-12 classroom (1st ed.)</em>. Eugene, Or: International Society for Technology in Education. ISBN 9781564843074 <a href="http://www.powells.com/biblio/61-9781564843074-0">powells</a> <a href="http://www.barnesandnoble.com/w/media-literacy-in-the-k-12-classroom-frank-w-baker/1104160405">b&amp;n</a> <a href="http://www.amazon.com/Media-Literacy-Classroom-Frank-Baker/dp/1564843076/">amz</a></p>
+                          <p><img src="http://ecx.images-amazon.com/images/I/51w5QjUCgLL.jpg" title="visual culture reader book cover" /> Mirzoeff, N. (Ed.). (2013). <em>The visual culture reader (3rd ed.)</em>. London ; New York: Routledge. ISBN 9780415620550 <a href="http://www.amazon.com/Visual-Culture-Reader-Nicholas-Mirzoeff/dp/0415782627/">amz</a> <a href="http://www.barnesandnoble.com/w/visual-culture-reader-nicholas-mirzoeff/1100170490">b&amp;n</a> <a href="http://www.powells.com/biblio/9780415782623">powells</a></p>
                           </section>
-                          <section class="level2" id="course-format">
-                          <h2><a href="#TOC">Course Format</a></h2>
+                          <section id="course-format" class="level2">
+                          <h2><a href="#course-format">Course Format</a></h2>
                           <p>This is an online cycle course, which will be primarily conducted using the course Moodle site. <strong>Students are required</strong> to check Moodle and class email at least once a day during the Cycle 2 dates. The course will operate on a Friday-Friday schedule, all work due for a given week <em>must</em> be completed by end of day on Friday of that week.</p>
                           <p>As this is a Cylce course, it will be faster paced and more condensed than a traditional 15-week semester course. Students <em>must</em> budget their time accordingly. Generally, the expectation is that students will spend the following amount of time for each week of the course:</p>
                           <ul>
@@ -95,8 +95,8 @@ http://education.adelphi.edu/ed-tech
                           <li>ability to use Skype and Google Hangout for video calls</li>
                           </ul>
                           </section>
-                          <section class="level2" id="class-meetings">
-                          <h2><a href="#TOC">Class meetings</a></h2>
+                          <section id="class-meetings" class="level2">
+                          <h2><a href="#class-meetings">Class meetings</a></h2>
                           <table>
                           <thead>
                           <tr class="header">
@@ -176,23 +176,31 @@ http://education.adelphi.edu/ed-tech
                           </tbody>
                           </table>
                           </section>
-                          <section class="level2" id="assignments-and-grading">
-                          <h2><a href="#TOC">Assignments and Grading</a></h2>
-                          <section class="level3" id="educational-media-studio-50">
-                          <h3><a href="#TOC">Educational Media Studio (50%)</a></h3>
+                          <section id="assignments-and-grading" class="level2">
+                          <h2><a href="#assignments-and-grading">Assignments and Grading</a></h2>
+                          <section id="educational-media-studio-50" class="level3">
+                          <h3><a href="#educational-media-studio-50">Educational Media Studio (50%)</a></h3>
                           <p>Working from a visuality and media literacy perspective, students will develop a substantial educational media project with explicit instructional value. Students will choose their own audience for this work: both the target age and ability level, as well as the domain and content for instruction.</p>
                           <p>Regardless of the content, the work <em>must</em> pay explicit attention to the aesthetic and semantic content of the work, beyond the instructional value.</p>
-                          <p>Acceptable media or this project include:</p>
+                          <p>Acceptable media for this project include:</p>
                           <ul>
                           <li>original digital or analog games for learning</li>
                           <li>websites, web applications, or mobile (web) apps</li>
                           <li>interactive SMARTBoard lessons</li>
                           <li>original instructional video or audio (video can be animated, live action, screencasts, or a combination)</li>
                           </ul>
-                          <p>Along with the educational media, each student will turn in a 500 word reflection where they indicate the goals of their project in terms of visual culture and media literacy, and discuss their successes and difficulties in meeting these goals.</p>
+                          <p>Along with the educational media, each student will turn in a ~300 word reflection where they indicate the goals of their project in terms of visual culture and media literacy, and discuss their successes and difficulties in meeting these goals.</p>
+                          <p>The media project will be evaluated in each of the following criteria, with a possible 10 points available for each area of evaluation:</p>
+                          <ol type="1">
+                          <li><em>Aesthetics</em>: is the the work visually appealing? does it use visual metaphors and &quot;visuality&quot; to make it more powerful and appealing? does the author carefully use color and composition?</li>
+                          <li><em>Learning sciences</em>: in what ways does the author draw on the best practices for how people learn and how people learn from visual media?</li>
+                          <li><em>Curriculum</em>: how does the project meet the stated curricular goals? does it address an important learning goal for the target audience? does the scale of the media match the learning goals? i.e., does the media focus on the most important or most challening apsects to teach?</li>
+                          <li><em>Technqique</em>: how well does the author demonstrate his/her facility with the given media? for example, do SMARTBoard lessons take advantage of the diverse tools available in the Notebook software? are digital images cropped and scaled &quot;cleanly&quot;? does the author demonstrate the ability to compose text and images?</li>
+                          <li><em>Reflection</em>: does the reflective paper clearly state the goals for the project? does the author clearly articulate the reasons for the choices in the project?</li>
+                          </ol>
                           </section>
-                          <section class="level3" id="visuality-in-educational-media-50">
-                          <h3><a href="#TOC">Visuality in Educational Media (50%)</a></h3>
+                          <section id="visuality-in-educational-media-or-youth-media-50" class="level3">
+                          <h3><a href="#visuality-in-educational-media-or-youth-media-50">Visuality in Educational Media or Youth Media (50%)</a></h3>
                           <p>Students will choose a work of educational media and write a critique based on the course readings. The essay should connect to the visuality of course themes, as they are represented in the media being studied. Themes include:</p>
                           <ul>
                           <li>media and violence</li>
@@ -200,6 +208,19 @@ http://education.adelphi.edu/ed-tech
                           <li>visuality of power, coloniality, and empire</li>
                           <li>markets, attention, and visual media</li>
                           <li>mediation</li>
+                          </ul>
+                          <p>Specifically, this paper should draw from at least four different essays from the <em>The visual culture reader</em> as well as <em>Media literacy in the K-12 classroom</em>.</p>
+                          <p>Suitable media:</p>
+                          <ul>
+                          <li>illustrated text books</li>
+                          <li>illustrated children's literature</li>
+                          <li>&quot;multimedia&quot; textbooks (such as iBooks)</li>
+                          <li>youth magazines</li>
+                          <li>video games (educational or otherwise)</li>
+                          <li>children's/youth television or films (e.g. PBS, Nickelodian)</li>
+                          <li>educational &quot;apps&quot; or websites</li>
+                          <li>educational video or documentaries</li>
+                          <li>SMARTBoard lessons</li>
                           </ul>
                           <p>This assignment must be between 4,000 and 5,000 words, and be written following the style and citation format of the APA.</p>
                           <p><strong>Assessment criteria:</strong></p>
@@ -241,7 +262,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Monday, 16. December 2013 12:26PM</tt></p>
+        <p><tt>Last modified: Monday, 27. January 2014 09:32AM</tt></p>
     
     
   </div>
