updated open-ed, first day

--- a/raw/ed-tech-school-practicum.html
+++ b/raw/ed-tech-school-practicum.html
@@ -26,6 +26,7 @@ http://education.adelphi.edu/ed-tech
     <li><a href="#project-1-technology-infrastructure">Project 1: Technology infrastructure</a></li>
     <li><a href="#project-2-professional-development">Project 2: Professional development</a></li>
     <li><a href="#project-3-co-teaching">Project 3: Co-teaching</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
     </ul></li>
     </ul>
   </div>
@@ -172,6 +173,15 @@ http://education.adelphi.edu/ed-tech
                           <p>For this project interns will be paired with classroom teachers who share their same domain background for teaching. Working with this master teacher, the intern will infuse review an existing unit that makes up part of the school's curriculum and then find ways to infuse the unit with suitable technologies. The intern will create appropriate, formal or informal, assessment measures to validate that the technology interventions contribute to student achievement. The intern will push-in with the master teacher to teach the technology-enhanced lessons. In most cases this project will take place during regular school hours, but if the situation allows, it can occur in afterschool programs that have academic focuses.</p>
                           <p><a href="http://www.iste.org/standards/nets-for-teachers"><strong>Assessment of this project will follow the standards detailed in the ISTE NETS for Teachers (NETS•T)</strong></a></p>
                           </section>
+                          <section class="level3" id="portfolio">
+                          <h3><a href="#TOC">Portfolio</a></h3>
+                          <p>Your portfolio is a reflective piece documenting your accomplishments in your school practicum. Please upload the following materials here:</p>
+                          <ul>
+                          <li>Brief (1-2 page) <strong>narrative</strong> of your experience working with the teachers and administrators in your school placement. Your write-up should also include which of the <a href="http://www.iste.org/standards/standards-for-coaches">NET standards</a> you chose to focus on, and how it was integrated into the work. You should also include a reflection of your participation and what you would have done differently to improve your experience.</li>
+                          <li><strong>Evidence:</strong> These include pictures, screenshots, videos, observation notes, and other artifacts that demonstrate your work and how you aligned to the NET standards.</li>
+                          </ul>
+                          <p>The product you turn-in should be organized in a way that would be easy to understand. Be sure to follow academic writing conventions, using proper grammar and spelling. You can combine your portfolio into a single PDF file, upload your narrative and supporting documents here in a single .zip, or share supporting evidence using Google Drive. Your portfolio is not meant to be <em>exhaustive</em> of your work, but <em>selective</em>: a few exemplary documents that demonstrate your best work and support your narrative will suffice.</p>
+                          </section>
                           </section></div>
 
   <div id="sylllabus-footer">
@@ -199,7 +209,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Monday, 16. December 2013 12:26PM</tt></p>
+        <p><tt>Last modified: Tuesday, 28. January 2014 02:37PM</tt></p>
     
     
   </div>
