changes to style for web

--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -593,6 +593,7 @@ http://education.adelphi.edu/ed-tech
                           </ul></li>
                           <li>Teaching/Learning Content &amp; Lessons
                           <ul>
+                          <li><a href="http://openassembly.com">OpenAssembly</a></li>
                           <li><a href="http://smarthistory.org/">Khan Academy Smarthistory</a></li>
                           <li><a href="http://cnx.org">Connexions</a></li>
                           <li><a href="http://www.claco.com/">Claco</a></li>
@@ -651,7 +652,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Thursday, 30. January 2014 09:25AM</tt></p>
+        <p><tt>Last modified: Friday, 31. January 2014 11:07AM</tt></p>
     
         <!-- Piwik -->
             <script type="text/javascript">
