updated print stylesheets to include a running header, rebuilt output with these new styles

--- a/raw/intro-to-programming.html
+++ b/raw/intro-to-programming.html
@@ -58,22 +58,12 @@ http://education.adelphi.edu/ed-tech
                           <p><strong>Description:</strong> This course introduces students to programming and some core concepts of computer science, using a modern, object oriented programming language (currently Python). Students learn concepts of variables, functions, repetition/loops, basic data structures (arrays, lists, hashtables), and basic object oriented programming.</p>
                           <p><strong>Instructor</strong></p>
                           <ul>
-                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <script type="text/javascript">
-                          <!--
-                          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
+                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></li>
                           <li><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 1</a></li>
                           </ul>
                           <p><strong>Teaching assistant</strong></p>
                           <ul>
-                          <li>Hannah Groves, <script type="text/javascript">
-                          <!--
-                          h='&#x6d;&#x61;&#x69;&#108;&#46;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#104;&#x61;&#110;&#110;&#x61;&#104;&#x67;&#114;&#x6f;&#118;&#x65;&#x73;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#104;&#x61;&#110;&#110;&#x61;&#104;&#x67;&#114;&#x6f;&#118;&#x65;&#x73;&#32;&#x61;&#116;&#32;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
+                          <li>Hannah Groves, <a href="mailto:hannahgroves@mail.adelphi.edu">hannahgroves@mail.adelphi.edu</a></li>
                           </ul>
                           <p><strong>Class meetings:</strong> Tues. 6:30-8:20PM, Harvey 104</p>
                           <p><strong>Ms. Groves Lab Hours</strong></p>
@@ -513,7 +503,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 02. February 2014 07:39AM</tt></p>
+        <p><tt>Last modified: Wednesday, 12. February 2014 10:11AM</tt></p>
     
     
   </div>
