--- a/raw/visual-media.html
+++ b/raw/visual-media.html
@@ -50,12 +50,7 @@ http://education.adelphi.edu/ed-tech
                           <p><strong>Description:</strong> This course focuses on the philosophy of visual media, with a pragmatic approach to understanding visual culture in our society: schools, youth media, mass media, etc. Students study theories of visuality and multimodal semiotics. They write philosophical critiques of current media, and develop original media projects informed by course readings.</p>
                           <p><strong>Instructor</strong></p>
                           <ul>
-                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <script type="text/javascript">
-                          <!--
-                          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
+                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></li>
                           <li><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 1</a></li>
                           </ul>
                           <p><strong>Cylce 2:</strong> Nov. 1 – Jan. 12</p>
@@ -262,7 +257,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 02. February 2014 07:39AM</tt></p>
+        <p><tt>Last modified: Wednesday, 12. February 2014 10:11AM</tt></p>
     
     
   </div>
