--- a/raw/ed-tech-school-practicum.html
+++ b/raw/ed-tech-school-practicum.html
@@ -53,19 +53,9 @@ http://education.adelphi.edu/ed-tech
                           <p>Each student will work with a field-based mentor who is a regular employee of a K-12 public school in New York State. Typically field mentors are school or district technology coordinators, school computer or media teachers, principals or assistant principals who have primary responsiblities for technology planning and implementation, or classroom teachers who fill technology leadership roles in their schools. In addition to the field mentor, the course is led by a university faculty supervisor.</p>
                           <p><strong>Faculty supervisors</strong></p>
                           <ul>
-                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <script type="text/javascript">
-                          <!--
-                          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
+                          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></li>
                           <li><p><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 1</a></p></li>
-                          <li>Aaron Hung, <script type="text/javascript">
-                          <!--
-                          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#104;&#x75;&#110;&#x67;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#104;&#x75;&#110;&#x67;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
+                          <li>Aaron Hung, <a href="mailto:hung@adelphi.edu">hung@adelphi.edu</a></li>
                           <li><p><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 2</a></p></li>
                           </ul>
                           <p><strong>University seminar meetings:</strong> TBD</p>
@@ -209,7 +199,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 02. February 2014 07:39AM</tt></p>
+        <p><tt>Last modified: Wednesday, 12. February 2014 10:11AM</tt></p>
     
     
   </div>
