--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -77,12 +77,7 @@ http://education.adelphi.edu/ed-tech
                           <h1><a href="#office-hours">Office Hours</a></h1>
                           <dl>
                           <dt>Matt Curinga, Post Annex, Room 1</dt>
-                          <dd><script type="text/javascript">
-                          <!--
-                          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
+                          <dd><a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a>
                           </dd>
                           <dd>Tuesday 3pm - 5pm
                           </dd>
@@ -96,12 +91,7 @@ http://education.adelphi.edu/ed-tech
                           <h1><a href="#lab-hours">Lab Hours</a></h1>
                           <dl>
                           <dt>Hannah Groves, Harvey 104</dt>
-                          <dd><script type="text/javascript">
-                          <!--
-                          h='&#x6d;&#x61;&#x69;&#108;&#46;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#104;&#x61;&#110;&#110;&#x61;&#104;&#x67;&#114;&#x6f;&#118;&#x65;&#x73;';e=n+a+h;
-                          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-                          // -->
-                          </script><noscript>&#104;&#x61;&#110;&#110;&#x61;&#104;&#x67;&#114;&#x6f;&#118;&#x65;&#x73;&#32;&#x61;&#116;&#32;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
+                          <dd><a href="mailto:hannahgroves@mail.adelphi.edu">hannahgroves@mail.adelphi.edu</a>
                           </dd>
                           <dd>Thursday 6:30pm - 8:20pm
                           </dd>
@@ -398,8 +388,7 @@ http://education.adelphi.edu/ed-tech
                           <ul>
                           <li><a href="http://www.w3.org/">W3C</a>, read the official specifications</li>
                           <li><a href="http://teamtreehouse.com/">Treehouse</a>, free trial of web, design, and other tutorials</li>
-                          <li>[Mozilla Developer</li>
-                          <li>Network](https://developer.mozilla.org/en-US/learn), html, css, &amp; javascript</li>
+                          <li><a href="https://developer.mozilla.org/en-US/learn">Mozilla Developer Network</a>, html, css, &amp; javascript</li>
                           <li><a href="http://www.w3schools.com/">W3 Schools</a>, html reference and tutorials</li>
                           <li><a href="http://codeacademy.com">CodeAcademy</a></li>
                           </ul>
@@ -444,7 +433,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 02. February 2014 07:39AM</tt></p>
+        <p><tt>Last modified: Wednesday, 12. February 2014 10:11AM</tt></p>
     
     
   </div>
