changes to open ed, small css changes, rebuilt

--- a/raw/digital-literacies.html
+++ b/raw/digital-literacies.html
@@ -98,7 +98,7 @@ version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
 
-<p><strong>Educational Technology 0858-501, Summer Institute Edition ’14</strong></p>
+<p><strong>Educational Technology 0858-501, Spring 2015</strong></p>
 <p><strong>Key words:</strong> digital literacies, multileracies, new literacy, semantics, new media, communication theory, youth media, media studies, software studies</p>
 <section id="description" class="level1">
 <h1>Description</h1>
@@ -489,7 +489,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Wednesday, 20. August 2014 12:02AM</tt></p>
+        <p><tt>Last modified: Monday, 26. January 2015 11:14AM</tt></p>
     
     
   </div>
