--- a/raw/team-dev.html
+++ b/raw/team-dev.html
@@ -164,7 +164,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 19. August 2014 11:37PM</tt></p>
+        <p><tt>Last modified: Monday, 26. January 2015 11:14AM</tt></p>
     
     
   </div>
