--- a/raw/multimedia-studio.html
+++ b/raw/multimedia-studio.html
@@ -323,7 +323,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 19. August 2014 11:37PM</tt></p>
+        <p><tt>Last modified: Monday, 26. January 2015 11:14AM</tt></p>
     
     
   </div>
