--- a/raw/video-games.html
+++ b/raw/video-games.html
@@ -624,7 +624,7 @@ Spina, S. U. (2004). Power plays: Video games' bad rap. In S. R. Steinberg & J. 
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 19. August 2014 11:37PM</tt></p>
+        <p><tt>Last modified: Monday, 26. January 2015 11:14AM</tt></p>
     
     
   </div>
