--- a/raw/web-programming2.html
+++ b/raw/web-programming2.html
@@ -343,7 +343,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Wednesday, 20. August 2014 03:12PM</tt></p>
+        <p><tt>Last modified: Monday, 26. January 2015 11:14AM</tt></p>
     
     
   </div>
