--- a/raw/research-seminar.html
+++ b/raw/research-seminar.html
@@ -66,7 +66,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <p><strong>Keywords:</strong> research methods, good questions, design research, ethnography, statistics, quantitative research, epistemology, technology research, mixed methods, action research</p>
 <p><strong>Description:</strong> In this course, students investigate methods for determining if a given technology contributes to a stronger educational experience. Reviewing the body of research on educational technology, students will probe the merits of different methodologies. Students learn how to develop good research questions and choose methodologies to conduct their own investigations.</p>
 <section id="goals" class="level2">
-<h2>Goals</h2>
+<h2><a href="#goals">Goals</a></h2>
 <p><strong>Spring 2013 Seminar Topic: Girls &amp; Programming</strong></p>
 <p>This research seminar exposes students to the general methods of social science research used in education settings as well as to the specific research paradigms common to technology research. They need these skills to be effective consumers of research; to make informed technology choices and to stay abreast of current trends. Further, they will be able to develop methodologically sound frameworks to test and evaluate the effectiveness of their own technology initiatives in the field.</p>
 <p>This course has two main goals:</p>
@@ -94,7 +94,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </ul>
 </section>
 <section id="online-resources" class="level2">
-<h2>Online Resources</h2>
+<h2><a href="#online-resources">Online Resources</a></h2>
 <ul>
 <li>Celly: <a href="http://cy.tl/UlBZ4q">http://cy.tl/UlBZ4q</a></li>
 <li>Course Wiki <a href="http://aws.curinga.com/wiki">http://aws.curinga.com/wiki</a></li>
@@ -104,11 +104,11 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </ul>
 </section>
 <section id="required-texts" class="level2">
-<h2>Required texts</h2>
+<h2><a href="#required-texts">Required texts</a></h2>
 <p><em>None</em></p>
 </section>
 <section id="bibliography-readings" class="level2">
-<h2>Bibliography &amp; readings</h2>
+<h2><a href="#bibliography-readings">Bibliography &amp; readings</a></h2>
 <p>Baker, R. S.J.D. 2009. The state of educational data mining in 2009: A review and future visions. <em>Journal of Educational Data Mining</em>, <em>1</em> (<em>1</em>)3–17.</p>
 <p>Bernhardt, Victoria. 2004. <em>Data Analysis for Continuous School Improvement. </em>Eye on Education. ISBN 1930556748.</p>
 <p>Bernhardt, Victoria. 2008. <em>Data, Data, Everywhere.</em> Eye on Education. ISBN 1596671025.</p>
@@ -129,20 +129,20 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <p>Willis, Jerry. 2008. <em>Qualitative research methods in education and educational technology.</em>Information Age Publishing. ISBN 9781930608542.</p>
 </section>
 <section id="class-sessions" class="level2">
-<h2>Class Sessions</h2>
+<h2><a href="#class-sessions">Class Sessions</a></h2>
 <section id="ways-of-knowing" class="level3">
-<h3>Ways of knowing</h3>
+<h3><a href="#ways-of-knowing">Ways of knowing</a></h3>
 </section>
 <section id="types-of-research" class="level3">
-<h3>Types of research</h3>
+<h3><a href="#types-of-research">Types of research</a></h3>
 <section id="readings-due" class="level4">
-<h4>Readings due:</h4>
+<h4><a href="#readings-due">Readings due:</a></h4>
 <p>Haslanger, S., Tuana, N., &amp; O’Connor, P. (2012). <a href="http://plato.stanford.edu/archives/win2012/entries/feminism-topics/">Topics in Feminism</a>. In E. N. Zalta (Ed.), <em>The Stanford Encyclopedia of Philosophy</em> (Winter 2012.).</p>
 <p>NSF. (n.d.). <a href="http://www.nsf.gov/statistics/women/">Women, Minorities, and Persons with Disabilities in S&amp;E</a>. US National Science Foundation (NSF).</p>
 <p>Haraway, D. (1988). <a href="http://www.staff.amu.edu.pl/~ewa/Haraway,%20Situated%20Knowledges.pdf">Situated Knowledges: The Science Question in Feminism and the Privilege of Partial Perspective</a>. <em>Feminist Studies</em>, <em>14</em>(3), 575–599. doi:10.2307/3178066</p>
 </section>
 <section id="assignments-due" class="level4">
-<h4>Assignments Due:</h4>
+<h4><a href="#assignments-due">Assignments Due:</a></h4>
 <ul>
 <li>Create an account on <a href="http://zotero.org">Zotero</a></li>
 <li>Set up Zotero on your computer</li>
@@ -151,51 +151,51 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </section>
 </section>
 <section id="quantitative-research" class="level3">
-<h3>Quantitative Research</h3>
+<h3><a href="#quantitative-research">Quantitative Research</a></h3>
 <section id="readings-due-1" class="level4">
-<h4>Readings due:</h4>
+<h4><a href="#readings-due-1">Readings due:</a></h4>
 <p>Boote, D. N. 2005. Scholars before researchers: On the centrality of the dissertation literature review in research preparation. <em>Educational Researcher</em>, <em>34</em> (<em>6</em>)3.</p>
 </section>
 </section>
 <section id="participants-and-subjects" class="level3">
-<h3>Participants and subjects</h3>
+<h3><a href="#participants-and-subjects">Participants and subjects</a></h3>
 </section>
 <section id="survey-based-research" class="level3">
-<h3>Survey-based research</h3>
+<h3><a href="#survey-based-research">Survey-based research</a></h3>
 </section>
 <section id="experimental-design" class="level3">
-<h3>Experimental design</h3>
+<h3><a href="#experimental-design">Experimental design</a></h3>
 </section>
 <section id="qualitative-research" class="level3">
-<h3>Qualitative Research</h3>
+<h3><a href="#qualitative-research">Qualitative Research</a></h3>
 </section>
 <section id="action-research-design-research" class="level3">
-<h3>Action Research &amp; Design Research</h3>
+<h3><a href="#action-research-design-research">Action Research &amp; Design Research</a></h3>
 </section>
 <section id="case-studies-ethnogrpahy" class="level3">
-<h3>Case Studies &amp; Ethnogrpahy</h3>
+<h3><a href="#case-studies-ethnogrpahy">Case Studies &amp; Ethnogrpahy</a></h3>
 </section>
 <section id="research-ethics" class="level3">
-<h3>Research ethics</h3>
+<h3><a href="#research-ethics">Research ethics</a></h3>
 </section>
 <section id="research-design-workshop-1" class="level3">
-<h3>Research Design Workshop 1</h3>
+<h3><a href="#research-design-workshop-1">Research Design Workshop 1</a></h3>
 </section>
 <section id="research-design-workshop-2" class="level3">
-<h3>Research Design Workshop 2</h3>
+<h3><a href="#research-design-workshop-2">Research Design Workshop 2</a></h3>
 </section>
 <section id="data-and-continuous-improvement" class="level3">
-<h3>Data and continuous improvement</h3>
+<h3><a href="#data-and-continuous-improvement">Data and continuous improvement</a></h3>
 </section>
 <section id="final-presentations" class="level3">
-<h3>Final presentations</h3>
+<h3><a href="#final-presentations">Final presentations</a></h3>
 <p>Students will present their research designs and receive feedback from the instructor and their peers.</p>
 </section>
 </section>
 <section id="assignments-and-grades" class="level2">
-<h2>Assignments and Grades</h2>
+<h2><a href="#assignments-and-grades">Assignments and Grades</a></h2>
 <section id="assignment-1-review-of-literature-40" class="level3">
-<h3>Assignment 1 — Review of literature (40%)</h3>
+<h3><a href="#assignment-1-review-of-literature-40">Assignment 1 — Review of literature (40%)</a></h3>
 <p>This semester, we will collaboratively author a “review of literature” related to gender studies of teaching computer science and related engineerign topics.</p>
 <p>Through this assignment, students will be evaluated on their ability to understand, analyze, and synthesize research from a range of sources using a variety of research methodologies.</p>
 <p>Collaboratively we will create an outline and scope for the review. Individual studentst will be responsible for sub-topics within the report. The group will share responsibility for editing and revising the document.</p>
@@ -203,7 +203,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </section>
 </section>
 <section id="assignment-2-research-design-pilot-60" class="level2">
-<h2>Assignment 2 — Research design &amp; Pilot (60%)</h2>
+<h2><a href="#assignment-2-research-design-pilot-60">Assignment 2 — Research design &amp; Pilot (60%)</a></h2>
 <p>For the final assignment, each student will develop a novel research study to explore an area of educational technology. Students will be encouraged to develop research that they can implement in their current work positions or in their upcoming fieldwork. The research design will be evaluated on:</p>
 <ul>
 <li>the importance of the research question</li>
@@ -243,8 +243,20 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 27. January 2015 01:22PM</tt></p>
+        <p><tt>Last modified: Tuesday, 27. January 2015 03:03PM</tt></p>
     
+        <!-- Piwik -->
+    <script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch( err ) {}
+    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
