another build of open ed

--- a/raw/social-media.html
+++ b/raw/social-media.html
@@ -239,7 +239,7 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Thursday, 29. January 2015 08:58AM</tt></p>
+        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
     
     
   </div>
