--- a/raw/video-games.html
+++ b/raw/video-games.html
@@ -624,7 +624,7 @@ Spina, S. U. (2004). Power plays: Video games' bad rap. In S. R. Steinberg & J. 
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Thursday, 29. January 2015 08:58AM</tt></p>
+        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
     
     
   </div>
