--- a/raw/visual-media.html
+++ b/raw/visual-media.html
@@ -269,7 +269,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Thursday, 29. January 2015 08:58AM</tt></p>
+        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
     
     
   </div>
