style changes, open ed

--- a/raw/mlearning.html
+++ b/raw/mlearning.html
@@ -51,13 +51,12 @@ http://education.adelphi.edu/ed-tech
     * version: 2.1
     * Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
     */-->
-
 <p><strong>Educational Technology 0858-612</strong></p>
 <p><strong>Course description.</strong> Most of the world connects to the Internet from mobile phones. Android tablets and iPads are filtering into schools — and the hands of children. Students carry significant computing power in their pockets. This course considers how mobile computing forces us to reconsider the time and place of learning.</p>
 <p><strong>Keywords:</strong> mlearning, mobile learning, android, ipad, tablet computing, one-to-one computing, 1:1, olpc</p>
-<p><strong>Previous Course website:</strong> <a href="http://mlearnau.tumblr.com">http://mlearnau.tumblr.com</a></p>
+<p><strong>Previous Course website:</strong> <a href="http://mlearnau.tumblr.com" class="uri">http://mlearnau.tumblr.com</a></p>
 <div class="img-right">
-<img src="http://www.internationalhero.co.uk/d/dicktracy.jpg" title="go to the originating site, thanks for the art" alt="http://www.internationalhero.co.uk/d/diktracy.htm" /> 1951, Dick Tracy’s wearable computer
+<p><img src="http://www.internationalhero.co.uk/d/dicktracy.jpg" title="go to the originating site, thanks for the art" alt="http://www.internationalhero.co.uk/d/diktracy.htm" /> 1951, Dick Tracy’s wearable computer</p>
 </div>
 <p>As mobile networks become faster and more ubiquitous, devices more powerful, and the Internet spreading to all corners of the world, mobile computing is becoming one of the main channels for teaching and learning. In this course, students will learn about mobile computing in schools, from 1:1 laptop programs to handheld computers. They will also look at how mobile computing supports learning outside of schools, both in K-12, higher ed, and informal settings.</p>
 <section id="goals-objectives" class="level2">
@@ -109,7 +108,7 @@ http://education.adelphi.edu/ed-tech
 <li>for questions about the course and support:
 <ul>
 <li>post a question on your blog, you never know who may help you out</li>
-<li>for “official” support, post your question to the course site: <a href="http://mlearnau.tumblr.com/ask">http://mlearnau.tumblr.com/ask</a> or contact the instructor</li>
+<li>for “official” support, post your question to the course site: <a href="http://mlearnau.tumblr.com/ask" class="uri">http://mlearnau.tumblr.com/ask</a> or contact the instructor</li>
 </ul></li>
 </ul>
 </section>
@@ -480,8 +479,20 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
+        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
     
+        <!-- Piwik -->
+    <script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch( err ) {}
+    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
