--- a/raw/ed-tech-school-practicum.html
+++ b/raw/ed-tech-school-practicum.html
@@ -47,7 +47,6 @@ We ask, but do not require, that attribution includes a link to our websites (ab
 version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
-
 <p><strong>School based practicum of educational technology 0858-801, Fall 2013</strong></p>
 <p><strong>Keywords:</strong> educational technology specialist, ed tech practicum, technology coordinator, student teaching, ISTE NETS</p>
 <p><strong>Description:</strong> EDT 801 is a field-based course where students put their developing talents as educational technologists into practice in K-12 schools in the Long Island and New York City region. Students pursuing the New York State Educational Technology Specialist certification <em>must</em> experience placements in elementary (1-6) and segundary (7-12) school settings. Additionally, at least one placement site will be in a school with a diverse student population and one placement will be in a technology-rich school.</p>
@@ -212,8 +211,20 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
+        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
     
+        <!-- Piwik -->
+    <script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch( err ) {}
+    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
