--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -68,7 +68,6 @@ We ask, but do not require, that attribution includes a link to our websites (ab
 version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
-
 <p><strong>Educational Technology 0858-502, Spring 2015</strong></p>
 <p><strong>Keywords:</strong> open education, deschooling, OER, free culture, networked learning, peer-to-peer learning, p2p learning, open source education, hacking education, peer production, MOOC</p>
 <p><strong>Description:</strong> Open education combines practices from Free Software development with (radically) student-centered pedagogy. In open education, free learning resources are developed collaboratively using the global internet, tailored locally to the specific needs of learners, and studied collaboratively. Students in this course consider the underlying principles of open education: why it works, when it fails, how it relates to “traditional” education, and what we want it to look like.</p>
@@ -112,7 +111,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <p>Hardt, M., &amp; Negri, A. (2009). <em>Commonwealth</em>. Harvard University Press.</p>
 <p>Iiyoshi, T., &amp; Kumar, M., Vijay, S. (2008). <a href="http://mitpress.mit.edu/sites/default/files/titles/content/9780262515016_Open_Access_Edition.pdf"><em>Opening Up Education: The Collective Advancement of Education through Open Technology, Open Content, and Open Knowledge</em></a>. MIT Press. Cambridge Mass.</p>
 <p>Illich, I. (1970, July 2). <a href="http://ournature.org/~novembre/illich/1970_Why_We_Must_Abolish_Schooling.html">Why We Must Abolish Schooling</a>. <em>The New York Review of Books</em>.</p>
-<p>Illich, I. (1971). <a href="" title="http://www.preservenet.com/theory/Illich/Deschooling/intro.html"><em>Deschooling Society</em></a>. Harper &amp; Row. New York.</p>
+<p>Illich, I. (1971). <a href="&quot;http://www.preservenet.com/theory/Illich/Deschooling/intro.html&quot;"><em>Deschooling Society</em></a>. Harper &amp; Row. New York.</p>
 <p>Kelty, C. (2008). <a href="http://twobits.net/read/"><em>Two Bits: The Cultural Significance of Free Software</em></a>. Duke University Press. Durham, N.C.</p>
 <p>Kamenetz, A. (2011). the <a href="http://www.edupunksguide.org/">Edupunks’ Guide to a DIY Education!</a> Bill and Melinda Gates Foundation. [website and ebook].</p>
 <p>Lessig, L. (2004). <a href="http://www.free-culture.cc/freeculture.pdf"><em>Free Culture: How Big Media Uses Technology and the Law to Lock Down Culture and Control Creativity</em></a>. Penguin Press HC.</p>
@@ -275,7 +274,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <h2>Foundations of Open Education</h2>
 <section id="readings-due" class="level4">
 <h4>Readings due:</h4>
-<p>Wiley, D. (n.d.). <a href="from%20https://learn.canvas.net/courses/4/pages/the-extended-argument-for-openness-in-education?module_item_id=52578">The Extended Argument for Openness in Education: Introduction to Openness in Education</a>. In course <a href="https://learn.canvas.net/courses/4"><em>Introduction to Openness in Education</em></a></p>
+<p>Wiley, D. (n.d.). <a href="https://learn.canvas.net/courses/4/pages/the-extended-argument-for-openness-in-education?module_item_id=52578">The Extended Argument for Openness in Education: Introduction to Openness in Education</a>. In course <a href="https://learn.canvas.net/courses/4"><em>Introduction to Openness in Education</em></a></p>
 <p><a href="http://gsiemens.tumblr.com/post/10153633521/how-to-participate-in-an-open-online-course">Nine steps to participating in a MOOC</a>, George Siemens.</p>
 </section>
 <section id="assignments" class="level4">
@@ -683,6 +682,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <ul>
 <li><a href="http://www.moodle.org">Moodle</a></li>
 <li><a href="https://github.com/instructure/canvas-lms/wiki">Canvas</a></li>
+<li><a href="https://community.adaptlearning.org/">Adapt Learning</a></li>
 <li><a href="http://wiki.scratch.mit.edu/wiki/Scratch_1.4_Source_Code">Scratch</a></li>
 <li><a href="http://snap.berkeley.edu/">Snap</a> <a href="https://github.com/jmoenig/Snap--Build-Your-Own-Blocks">Source Code</a></li>
 <li><a href="http://buddypress.org/">BuddyPress</a></li>
@@ -730,8 +730,20 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
+        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
     
+        <!-- Piwik -->
+    <script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch( err ) {}
+    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
