--- a/raw/research-seminar.html
+++ b/raw/research-seminar.html
@@ -61,7 +61,6 @@ We ask, but do not require, that attribution includes a link to our websites (ab
 version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
-
 <p><strong>Educational Technology 0858-618, Spring 2012</strong></p>
 <p><strong>Keywords:</strong> research methods, good questions, design research, ethnography, statistics, quantitative research, epistemology, technology research, mixed methods, action research</p>
 <p><strong>Description:</strong> In this course, students investigate methods for determining if a given technology contributes to a stronger educational experience. Reviewing the body of research on educational technology, students will probe the merits of different methodologies. Students learn how to develop good research questions and choose methodologies to conduct their own investigations.</p>
@@ -96,11 +95,11 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <section id="online-resources" class="level2">
 <h2>Online Resources</h2>
 <ul>
-<li>Celly: <a href="http://cy.tl/UlBZ4q">http://cy.tl/UlBZ4q</a></li>
-<li>Course Wiki <a href="http://aws.curinga.com/wiki">http://aws.curinga.com/wiki</a></li>
-<li>Zotero Group: Girls, Women &amp; Computer Science <a href="https://www.zotero.org/groups/girls_women__computer_science">https://www.zotero.org/groups/girls_women__computer_science</a></li>
-<li>Google Scholar <a href="http://scholar.google.com">http://scholar.google.com</a></li>
-<li>Adelphi Libraries <a href="http://libraries.adelphi.edu">http://libraries.adelphi.edu</a></li>
+<li>Celly: <a href="http://cy.tl/UlBZ4q" class="uri">http://cy.tl/UlBZ4q</a></li>
+<li>Course Wiki <a href="http://aws.curinga.com/wiki" class="uri">http://aws.curinga.com/wiki</a></li>
+<li>Zotero Group: Girls, Women &amp; Computer Science <a href="https://www.zotero.org/groups/girls_women__computer_science" class="uri">https://www.zotero.org/groups/girls_women__computer_science</a></li>
+<li>Google Scholar <a href="http://scholar.google.com" class="uri">http://scholar.google.com</a></li>
+<li>Adelphi Libraries <a href="http://libraries.adelphi.edu" class="uri">http://libraries.adelphi.edu</a></li>
 </ul>
 </section>
 <section id="required-texts" class="level2">
@@ -243,8 +242,20 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Friday, 30. January 2015 12:28PM</tt></p>
+        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
     
+        <!-- Piwik -->
+    <script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch( err ) {}
+    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
